scratchwork/syntax.txt

white_space = ? white_space characters ? ;

letter = "A" | "B" | "C" | "D" | "E" | "F" | "G"
       | "H" | "I" | "J" | "K" | "L" | "M" | "N"
       | "O" | "P" | "Q" | "R" | "S" | "T" | "U"
       | "V" | "W" | "X" | "Y" | "Z" | "a" | "b"
       | "c" | "d" | "e" | "f" | "g" | "h" | "i"
       | "j" | "k" | "l" | "m" | "n" | "o" | "p"
       | "q" | "r" | "s" | "t" | "u" | "v" | "w"
       | "x" | "y" | "z" ;
digit = "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9" ;

string_symbol = "~" | "`" | "!" | "@" | "#" | "$" | "%" | "^" | "&" | "*" | "(" | ")" | "_" | "-" | "+" | "=" | "{" | "[" | "}" | "]" | "|" | '\\' | ":" | ";"
              | "'" | '\"' | "<" | "," | ">" | "." | "?" | "/" ;

identifier_symbol = "~" | "`" | "!" | "@" | "#" | "$" | "%" | "^" | "&" | "*" | "_" | "-" | "+" | "=" | "[" | "]" | "|" | "\" | ";"
                  | "'" | "<" | "," | ">" | "." | "?" | "/" ;


bool = 'true' | 'false' ;
integer = [ "-" ] , digit , { digit } ;
float = [ "-" ] , ( ( digit , { digit } , "." , { digit } ) | ( { digit } , "." , digit , { digit } ) ) , [ "e" , integer ] ;
string = ( '"' , { letter | digit | string_symbol } , '"' ) | "'" , ( identifier | expression ) ;

number = bool | integer | float ;
constant = number | string ;

identifier = ( letter | identifier_symbol ) , { letter | digit | identifier_symbol } ;

// array = "{" , compound_expression , { white_space , compound_expression } , "}" ;
// struct = "{" , { compound_expression , white_space , compound_expression } , { white_space , { compound_expression , white_space , compound_expression } } , "}" ;


expression = "(" , compound_expression , { white_space , compound_expression } , ")" ;

compound_expression = ( expression | identifier | constant ) ;

program = compound_expression , { white_space , compound_expression } ;
